[tool.poetry]
name = "airportv3-pj"
version = "0.1.0"
description = ""
authors = ["t-masuda"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.156"
requests = "^2.32.3"
botocore = "^1.34.156"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
